setting kelas skor

--- a/apps/frontend-sd/src/app/_shared/sidebar/sidebar.component.html
+++ b/apps/frontend-sd/src/app/_shared/sidebar/sidebar.component.html
@@ -28,6 +28,8 @@
             <li><a routerLink="/subject" class="nav-link"><i class="fas fa-user-secret"></i>Subjects</a></li>
 
             <li><a routerLink="/schedule" class="nav-link"><i class="fas fa-user-secret"></i>Schedule</a></li>
+
+            <li><a routerLink="/academicyear" class="nav-link"><i class="fas fa-user-secret"></i>Academic Year</a></li>
         </ul>
     </mat-sidenav>
     <mat-sidenav-content>
