--- a/apps/frontend-sd/src/app/class/class.component.html
+++ b/apps/frontend-sd/src/app/class/class.component.html
@@ -1,42 +1,104 @@
 <mat-tab-group>
-    <mat-tab label="All Students">
-        <div class="title">
-            <div class="head"><p>All Student</p></div>
-        </div>
-        <div class="route">
-            <p>Home <span> > All Student</span></p>
-        </div>
-        <div class="container-table">
+  <mat-tab label="All Students">
+    <div class="title">
+      <div class="head"><p>All Student</p></div>
+    </div>
+    <div class="route">
+      <p>Home <span> > All Student</span></p>
+    </div>
+    <div class="container-table">
+      <table>
+        <tr class="header">
+          <th>
+            <p>Id</p>
+          </th>
+          <th>
+            <p>Kelas</p>
+          </th>
+          <th>
+            <p>Teacher</p>
+          </th>
+          <th>
+            <p>subject</p>
+          </th>
+          <th>
+            <p>Email</p>
+          </th>
+          <th>
+            <p>phone</p>
+          </th>
+        </tr>
+        <tr *ngFor="let data of kelas">
+          <td>
+            <p>{{ data.id }}</p>
+          </td>
+          <td>
+            <p>{{ data.class_name }}</p>
+          </td>
+          <td>
+            <p>{{ data.teacher.first_name }} {{ data.teacher.last_name }}</p>
+          </td>
+          <td>
+            <p *ngFor="let data of subject">{{ data.subject_name }}</p>
+          </td>
+          <td>
+            <p>{{ data.teacher.email }}</p>
+          </td>
+          <td>
+            <p>{{ data.teacher.phone }}</p>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </mat-tab>
+  <mat-tab label="Score by Class">
+    <h4>Score</h4>
+
+    <mat-tab-group >
+        <mat-tab *ngFor="let data of kelas">
+        <mat-tab label="{{data.class_name}}" >
+            
             <table>
-                <tr class="header">
-                    <th>
-                        <p>Id</p>
-                    </th>
-                    <th>
-                        <p>Kelas</p>
-                    </th>
-                    <th>
-                        <p>Teacher</p>
-                    </th>
-                    <th>
-                        <p>subject</p>
-                    </th>
-                    <th>
-                        <p>Email</p>
-                    </th>
-                    <th>
-                        <p>phone</p>
-                    </th>
-                </tr>
-                <tr *ngFor="let data of kelas">
-                    <td><p>{{data.id}}</p></td>
-                    <td><p>{{data.class_name}}</p></td>
-                    <td><p>{{data.teacher.first_name}} {{data.teacher.last_name}}</p></td>
-                    <td><p *ngFor="let data of subject">{{data.subject_name}}</p></td>
-                    <td><p>{{data.teacher.email}}</p></td>
-                    <td><p>{{data.teacher.phone}}</p></td>
-                </tr>
-            </table>
-        </div>
+                <thead>
+                  <tr *ngFor="let data of student[0].subject">
+                    <th> </th>
+                    <th>{{data.subject_name.subject_namedd}}</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th>Lily</th>
+                    <td>60</td>
+                    <td>70</td>
+                    <td>80</td>
+                  </tr>
+                </tbody>
+              </table>
+        </mat-tab>
     </mat-tab>
+    </mat-tab-group>
+        
+
+  </mat-tab>
+  <mat-tab label="Ranking by Class">
+      <h2>Ranking</h2>
+      <table>
+        <thead>
+          <tr>
+            <th> </th>
+            <th>Math</th>
+            <th>History</th>
+            <th>Math</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th>Lily</th>
+            <td>60</td>
+            <td>70</td>
+            <td>80</td>
+          </tr>
+        </tbody>
+      </table>
+  </mat-tab>
 </mat-tab-group>
