--- a/apps/frontend-sd/src/app/class/class.component.html
+++ b/apps/frontend-sd/src/app/class/class.component.html
@@ -55,29 +55,38 @@
     <h4>Score</h4>
 
     <mat-tab-group >
-        <mat-tab *ngFor="let data of kelas">
-        <mat-tab label="{{data.class_name}}" >
+        <!-- <mat-tab *ngFor="let data of kelas"> -->
+
+        <mat-tab *ngFor="let data of kelas" label="{{data.class_name}}" >
             
-            <table>
-                <tbody >
-                  <tr *ngFor="let data of student">
-                    <td>{{data.subject.subject_name}}</td>
+            
+                  <div *ngFor="let data of student[0].subject">
+                    <div >
+                      <p>{{data.subject_name.subject_name}}</p>
+                    </div>
+                    <div>
+                      <p>{{data._id}}</p>
+                    </div>
+                  </div>
+
+                  <!-- <table mat-table [dataSource]="dataSource">
+                    <ng-container matColumnDef="nama">
+                    <th mat-header-cell *matHeaderCellDef> Nama </th>
+                    <td mat-cell *matCellDef="let student">{{student.first_name}}</td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="kelas">
+                      <th mat-header-cell *matHeaderCellDef> Kelas </th>
+                      <td mat-cell *matCellDef="let student">{{student.kelas}}</td>
+                      </ng-container>
               
-                    <td>{{data.first_name}}</td>
-                  </tr>
-                </tbody>
-                <!-- <tbody>
-                  <tr>
-                    <th>Lily</th>
-                    <td>60</td>
-                    <td>70</td>
-                    <td>80</td>
-                  </tr>
-                </tbody> -->
-              </table>
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                  </table> -->
         </mat-tab>
-    </mat-tab>
     </mat-tab-group>
+
+    
         
 
   </mat-tab>
