--- a/apps/frontend-sd/src/app/student/student.component.html
+++ b/apps/frontend-sd/src/app/student/student.component.html
@@ -29,34 +29,7 @@
     </mat-expansion-panel>
   </mat-tab>
 
-  <mat-tab label="{{kls.class_name}}" *ngFor="let kls of kelas">
-    <div class="title">
-      <div class="head"><p>No</p></div>
-    </div>
-    <div class="route">
-      <p>Home <span> > gak All Student</span></p>
-    </div>
-    <mat-expansion-panel
-      (opened)="panelOpenState = true"
-      (closed)="panelOpenState = false"
-      *ngFor="let data of student"
-      getAllStudentByClass(kls._id)
-      style="padding-bottom: 10px"
-    >
-      <mat-expansion-panel-header >
-        <mat-panel-title>
-          {{ data.first_name }} {{ data.last_name }}
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-      <tr>
-        <p>{{ data.id }}</p>
-      </tr>
-      <tr>
-        <p>{{ data.gender }}</p>
-      </tr>
-      <tr>
-        <p>{{ data.kelas.class_name }}</p>
-      </tr>
-    </mat-expansion-panel>
+  <mat-tab label="{{ kls.class_name }}" *ngFor="let kls of kelas">
+    <app-sd-student-by-class [parentData]="kls._id"></app-sd-student-by-class>
   </mat-tab>
 </mat-tab-group>
