update parent and setting academic year

--- a/apps/parent/src/app/_shared/calendar/calendar.component.html
+++ b/apps/parent/src/app/_shared/calendar/calendar.component.html
@@ -1,1 +1,8 @@
-<p>calendar works!</p>
+<full-calendar
+  id="schedule"
+  *ngIf="calendarVisible"
+  [options]="calendarOptions"
+></full-calendar>
+<button mat-raised-button color="primary" (click)="convertToPDF()">
+  convertToPDF
+</button>
