--- a/apps/parent/src/app/_shared/sidebar/sidebar.component.css
+++ b/apps/parent/src/app/_shared/sidebar/sidebar.component.css
@@ -9,42 +9,47 @@ mat-sidenav-container{
  mat-sidenav{
      width: 220px;
  }
- .menu{
-     cursor: pointer;
- }
- .menu fa{
-     height: 30px;
- }
- .title-sidenav{
-     display: flex;
-     justify-content:space-between;
-     align-items: center;
-     width: 153px;
-     margin: auto;
- }
- .name-sidenav {
-     height: 18px;
- }
- p {
-     font-size: 18px;
-     font-family: inherit;
-     font-weight: 500;
- }
- .list li{
-     list-style: none;
-     margin: 17px 0;
- }
- .list li a{
-     color: white;
-     text-decoration: none;
-     font-size: 20px;
- }
- .list{
-     margin-top: 30px;
- }
- .list li a:hover{
-     color: rgb(241, 88, 88);
- }
- a.nav-link {
-     cursor: pointer;
- }
+ 
+.logo {
+    padding: 20px;
+    width: 75%;
+  }
+  .logo img {
+    max-width: 100%;
+  }
+  
+  .links ul {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .links ul li {
+    display: block;
+    list-style: none;
+    width: 100%;
+  }
+  .links ul li a {
+    color: var(--surface-a);
+    padding: 10px 15px;
+    display: block;
+    width: 83%;
+    text-decoration: none;
+  }
+  .links ul li a mat-icon {
+    margin-right: 8px;
+    margin-top: -3px;
+    float: left;
+  }
+  .links ul li a:hover {
+    background-color: rgb(91, 214, 245);
+  }
+  mat-toolbar.mat-toolbar.mat-toolbar-single-row {
+    background: #ffff;
+}
+mat-sidenav-content.mat-drawer-content.mat-sidenav-content {
+  background: #ebeaea;
+}
+.menu:hover{
+  cursor:pointer;
+  color: blue;
+}
