--- a/apps/parent/src/app/profile/detail-profile/detail-profile.component.css
+++ b/apps/parent/src/app/profile/detail-profile/detail-profile.component.css
@@ -25,8 +25,8 @@
     margin-bottom: 100px;
   }
   .photo img {
-    width: 155px;
-    height: auto;
+   max-width: 235px;
+    height: 100%;
   }
   .name1 {
     width: 155px;
@@ -36,7 +36,21 @@
   }
   .photo {
     margin: 35px;
-  }.edit {
+  }
+  .edit {
     float: right;
     margin: 20px;
+  }
+  img.photo-profil {
+    clip-path: circle();
+  }
+  .title {
+    text-align: center;
+    font-size: 40px;
+    margin: 38px;
+    color: #565656;
+  }
+  
+  .bio {
+    padding-bottom: 60px;
   }
