update edit subject

--- a/apps/frontend-sd/src/app/class-by-score/class-by-score.component.html
+++ b/apps/frontend-sd/src/app/class-by-score/class-by-score.component.html
@@ -10,7 +10,7 @@
     <!-- ID Column -->
     <ng-container matColumnDef="nama">
       <mat-header-cell *matHeaderCellDef mat-sort-header> Nama </mat-header-cell>
-      <mat-cell *matCellDef="let Student"> {{student.first_name}} </mat-cell>
+      <mat-cell *matCellDef="let student"> {{student._id}} </mat-cell>
     </ng-container>
 
     <!-- Progress Column -->
