--- a/apps/frontend-sd/src/app/class/class.component.html
+++ b/apps/frontend-sd/src/app/class/class.component.html
@@ -59,7 +59,7 @@
 
     
         <mat-tab label="{{kelas.class_name}}" *ngFor="let kelas of kelas">
-          <app-class-by-score [parentData]="kelas._id"></app-class-by-score>
+          <app-class-by-score [parentData]="student._id"></app-class-by-score>
         </mat-tab>
     </mat-tab-group>
 
